@@ -100,6 +100,7 @@ class FeedsRSStoNodesTest extends FeedsWebTestCase {
 
     // Assert accuracy of aggregated information.
     $this->drupalGet('node');
+    $this->assertPattern('/<span class="submitted">(.*?)Anonymous<\/span>/');
     $this->assertText('Open Atrium Translation Workflow: Two Way Translation Updates');
     $this->assertText('Tue, 10/06/2009');
     $this->assertText('A new translation process for Open Atrium &amp; integration with Localize Drupal');
@@ -172,12 +173,16 @@ class FeedsRSStoNodesTest extends FeedsWebTestCase {
     $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_node_item}"));
     $this->assertEqual($count, 0, 'Accurate number of items in database.');
 
-    // Import again, we should find new content.
+    // Change author, import again.
+    $author = $this->drupalCreateUser();
+    $this->setSettings('syndication', 'FeedsNodeProcessor', array('author' => $author->name));
     $this->drupalPost('node/'. $nid .'/import', array(), 'Import');
     $this->assertText('Created 10 Story nodes.');
 
-    // Assert DB status, there should be 10 again.
-    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_node_item}"));
+    // Assert author.
+    $this->drupalGet('node');
+    $this->assertPattern('/<span class="submitted">(.*?)'. check_plain($author->name) .'<\/span>/');
+    $count = db_result(db_query("SELECT COUNT(*) FROM {feeds_node_item} fi JOIN {node} n ON fi.nid = n.nid WHERE n.uid = %d", $author->uid));
     $this->assertEqual($count, 10, 'Accurate number of items in database.');
 
     // Login with new user with only access content permissions.
